--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="app2.js"></script>
+    <!-- <script src="app2.js"></script> -->
+    <script src="interface.js"></script>
 </body>
 
 </html>
